--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="header-container container">
         <a href="" class="logo">mntn</a>
-        <nav class="header-nav"></nav>
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="" class="nav-link">Equipment</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">About us</a>
-          </li>
-          <li class="nav-item">
-            <a href="" class="nav-link">Blog</a>
-          </li>
-        </ul>
+        <nav class="header-nav">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="" class="nav-link">Equipment</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">About us</a>
+            </li>
+            <li class="nav-item">
+              <a href="" class="nav-link">Blog</a>
+            </li>
+          </ul>
+        </nav>
         <div class="header-action">
           <a href="./src/images/account.zip" class="action-link">Account</a>
         </div>
@@ -43,14 +44,14 @@
     </header>
     <main class="main">
       <section class="hero">
-        <div class="container">
+        <div class="hero-container container">
           <p class="hero-subtitle">A Hiking guide</p>
           <h1 class="hero-title">Be prepared for the Mountains and beyond!</h1>
           <a href="#travel" class="hero-link">scroll down</a>
         </div>
       </section>
       <section class="travel" id="travel">
-        <div class="container">
+        <div class="travel-container container">
           <h2 hidden>Travell</h2>
           <ul class="travel-list">
             <li class="travel-item">
@@ -130,7 +131,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="footer-container container">
         <div class="footer-info">
           <a href="" class="logo">mntn</a>
           <p class="footer-info-text">
