додав векторну графіку

--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
           </ul>
         </nav>
         <div class="header-action">
-          <a href="./src/images/account.zip" class="action-link">Account</a>
+          <a href="./src/images/account.zip" class="action-link">
+            <svg class="action-link-icon">
+              <use href="./src/images/icons.svg#icons-account" />
+            </svg>
+            Account
+          </a>
         </div>
       </div>
     </header>
