додав векторну графіку

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- <svg class="action-link-icon">
+    <use href="./src/images/icons.svg#icons-account" />
+  </svg> -->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=], initial-scale=1.0" />
@@ -38,12 +41,7 @@
           </ul>
         </nav>
         <div class="header-action">
-          <a href="./src/images/account.zip" class="action-link">
-            <svg class="action-link-icon">
-              <use href="./src/images/icons.svg#icons-account" />
-            </svg>
-            Account
-          </a>
+          <a href="./src/images/account.zip" class="action-link"> Account </a>
         </div>
       </div>
     </header>
